test/fail/entitynamehygiene-3.app
// Entity name: "small" should start with a Capital
application test

  entity small {
    property :: String
  }

  define bla(){
      var bla := highlight function():D_N{} <= global.M1N for (search small);
  }
